--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase": "^11.3.0",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.456.0",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
