--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-pdf/renderer": "^4.1.6",
     "@reduxjs/toolkit": "^2.2.8",
     "@tailwindcss/forms": "^0.5.9",
+    "@vercel/analytics": "^1.5.0",
     "aos": "^2.3.4",
     "appwrite": "^14.0.1",
     "clsx": "^2.1.1",
