--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.3.0",
+    "gsap": "^3.13.0",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.456.0",
     "pdfjs-dist": "^3.11.174",
