--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
